// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-transform-jsx-directives applies directives in nested elements 1`] = `
"import _actionDirective from \\"./test/directives/action.js\\";

<_actionDirective Elm=\\"a\\" props={{}} options=\\"none\\" next={(_Elm, _props) => <_Elm {..._props}>
        <_actionDirective Elm=\\"b\\" props={{}} options=\\"all\\" next={(_Elm2, _props2) => <_Elm2 {..._props2} />} />
      </_Elm>} />;"
`;

exports[`babel-plugin-transform-jsx-directives applies multiple directives on same element 1`] = `
"import _htmlDirective from \\"./test/directives/html.js\\";
import _actionDirective from \\"./test/directives/action.js\\";

<_htmlDirective Elm=\\"html\\" props={{}} next={(_Elm2, _props2) => <_actionDirective Elm={_Elm2} props={_props2} options={woosa} next={(_Elm, _props) => <_Elm {..._props} />} />} />;"
`;

exports[`babel-plugin-transform-jsx-directives converts jsx spread operators to object spread 1`] = `
"import _htmlDirective from \\"./test/directives/html.js\\";

<_htmlDirective Elm=\\"html\\" props={{
      ...bar
}} next={(_Elm, _props) => <_Elm {..._props} />} />;"
`;

exports[`babel-plugin-transform-jsx-directives transforms an atrribute directive 1`] = `
"import _actionDirective from \\"./test/directives/action.js\\";
<_actionDirective Elm={Button} props={{
  foo: bar
}} options={click} next={(_Elm, _props) => <_Elm {..._props}>baz</_Elm>} />;"
`;

exports[`babel-plugin-transform-jsx-directives transforms an element directive 1`] = `
"import _htmlDirective from \\"./test/directives/html.js\\";
<_htmlDirective Elm=\\"html\\" props={{
  foo: \\"bar\\"
}} next={(_Elm, _props) => <_Elm {..._props}>foo</_Elm>} />;"
`;

exports[`babel-plugin-transform-jsx-directives understands jsx 1`] = `"<foo />;"`;
